[project]
name = "zwiftladderstats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.2",
    "pandas>=2.2.3",
    "streamlit>=1.39.0",
]

[dependency-groups]
dev = [
    "watchdog>=5.0.3",
]
